openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parsec-service
  labels:
    app: parsec
    component: api
spec:
  type: ClusterIP
  selector:
    app: parsec
    component: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
